@@ -101,13 +101,14 @@ factory_type_information = (
                   'permissions': (View,),
                   'category': 'object',
                   },
-                 {'id': 'calendar_event_viewer',
-                  'name': 'action_calendar_event_viewer',
-                  'action': 'string:${object_url}/calendar_event_viewer?disp=week',
-                  'condition': "",
-                  'permissions': (View,),
-                  'category': 'object',
-                  },
+# This screen is not finished.
+#                  {'id': 'calendar_event_viewer',
+#                   'name': 'action_calendar_event_viewer',
+#                   'action': 'string:${object_url}/calendar_event_viewer?disp=week',
+#                   'condition': "",
+#                   'permissions': (View,),
+#                   'category': 'object',
+#                   },
                  {'id': 'addevent',
                   'name': 'action_addevent',
                   'action': 'string:${object_url}/calendar_addevent_form',
